# badbebras-stealer

./: .gitignore  Cargo.toml  README.md
src/: main.rs  toggle.rs
src/apps/: mod.rs  telegram.rs
src/browser/: browsers.rs  chromium.rs  common.rs  crypto.rs  gecko.rs  mod.rs
src/utils/: funcs.rs  mod.rs  os.rs
